--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
     (function () {
-      var u = "http://localhost/matomo/";
+      var u = "//localhost/matomo/";
       _paq.push(['setTrackerUrl', u + 'matomo.php']);
       _paq.push(['setSiteId', '2']);
       var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
