--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
   <!-- Matomo -->
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     var _paq = window._paq = window._paq || [];
     /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
     _paq.push(['trackPageView']);
@@ -30,8 +30,27 @@
       var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
       g.type = 'text/javascript'; g.async = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
     })();
-  </script>
+  </script> -->
   <!-- End Matomo Code -->
+
+  <!-- Start Open Web Analytics Tracker -->
+  <script type="text/javascript">
+    //<![CDATA[
+    var owa_baseUrl = 'http://localhost/openwebanalytics/';
+    var owa_cmds = owa_cmds || [];
+    owa_cmds.push(['setSiteId', 'a96f4229963fea105c7afe619f50bbe3']);
+    owa_cmds.push(['trackPageView']);
+    owa_cmds.push(['trackClicks']);
+
+    (function () {
+      var _owa = document.createElement('script'); _owa.type = 'text/javascript'; _owa.async = true;
+      owa_baseUrl = ('https:' == document.location.protocol ? window.owa_baseSecUrl || owa_baseUrl.replace(/http:/, 'https:') : owa_baseUrl);
+      _owa.src = owa_baseUrl + 'modules/base/js/owa.tracker-combined-min.js';
+      var _owa_s = document.getElementsByTagName('script')[0]; _owa_s.parentNode.insertBefore(_owa, _owa_s);
+    }());
+  //]]>
+  </script>
+  <!-- End Open Web Analytics Code -->
 </head>
 
 <body>
